# tomatih.github.io

./: Cargo.toml  TODO.md  index.html
.github/: continuous_deployment.yml
.github/workflows/: continuous_deployment.yml
.run/: Build Debug.run.xml  Build Release.run.xml
assets/: WIP.mtl  WIP.qoi  default_diffuse.qoi  default_normal.qoi
pkg/: package.json  personal_page.d.ts  personal_page.js  personal_page_bg.wasm  personal_page_bg.wasm.d.ts
shaders/: wip.wgsl
src/: asset_loader.rs  camera.rs  grapics_context.rs  lib.rs  model.rs  resources.rs  runnable.rs  texture.rs  wgpu_helpers.rs  wip_page.rs
