[package]
name = "personal_page"
version = "0.1.0"
edition = "2021"
description = "A personal website written using WGPU"
repository = "https://github.com/tomatih/tomatih.github.io"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"

[dependencies.web-sys]
version = "0.3.70"
features = [
    "Window"
]