[package]
name = "personal_page"
version = "0.1.0"
edition = "2021"
description = "A personal website written using WGPU"
repository = "https://github.com/tomatih/tomatih.github.io"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.43"
winit = { version = "0.29", features = ["rwh_05"] }
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
wgpu = { version = "0.20.1", features = ["webgl"] }
log = "0.4.22"


[dependencies.web-sys]
version = "0.3.70"
features = [
    "Window"
]